fix: fix overflow on shop page

--- a/styles/base.css
+++ b/styles/base.css
@@ -313,7 +313,7 @@ ul#menu {
 
 @media screen and (max-width: 480px) {
     #footer-wrapper {
-        padding: 20% 10%;
+        padding: 15% 10%;
     }
 
     #social-icons {
